# window_moments

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  window_moments.code-workspace
windows_moments/: __init__.py  bounds.py  data.py  moment.py  system.py
